--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
           <div class="col">
             <div class="card shadow-sm rounded text-center" data-aos-delay="500" data-aos="fade-up"
               data-aos-duration="1000">
-              <img src="assets/img/icons/peppers.png" alt="rempah-asli">
+              <img src="assets/img/icons/corn.png" alt="rempah-asli">
               <br>
-              <h4>Rempah Asli</h4>
+              <h4>Jagung Asli</h4>
               <p>
-                Terbuat dari rempah-rempah asli <br> Indonesia yang berkualitas.
+                Terbuat dari jagung asli <br> yang berkualitas.
               </p>
             </div>
           </div>
           <div class="col">
             <div class="card shadow-sm rounded text-center" data-aos-delay="500" data-aos="fade-up"
               data-aos-duration="1000">
-              <img src="assets/img/icons/bibimbap.png" alt="varian-rasa">
+              <img src="assets/img/icons/variant.png" alt="varian-rasa">
               <br>
               <h4>Varian Rasa</h4>
               <p>
@@ -126,8 +126,7 @@
           <div class="col-12 mt-5 mb-3">
             <h1 class="mb-1">Produk Kami</h1>
             <p class="text-white">
-              Memiliki berbagai macam varian rasa, dapat memenuhi kebutuhan konsumen akan bumbu masak yang
-              berkualitas.
+              Memiliki berbagai macam varian rasa, dapat memenuhi selera anda dengan pilihan rasa yang beragam.
             </p>
           </div>
         </div>
@@ -139,10 +138,15 @@
             <div class="card" data-aos="fade-up">
               <img src="assets/img/products/corn-ribs.png" class="card-img-top img-fluid" alt="varian-rawon">
               <div class="card-body text-start">
-                <h5>Rawon</h5>
+                <h5>Corn Ribs</h5>
                 <p class="card-text">
-                  Bumbu Masak Umik varian Rawon yang khusus dibuat untuk memasak Rawon.
+                  Nikmati berbagai varian rasa, seperti Balado, Cheese, dan Spicy Creamy.
                 </p>
+                <ul class="varian-list">
+                  <li><strong>Balado:</strong> Pedas khas Indonesia.</li>
+                  <li><strong>Cheese:</strong> Gurih dengan taburan keju.</li>
+                  <li><strong>Spicy Creamy:</strong> Perpaduan rasa pedas dan creamy.</li>
+                </ul>
               </div>
               <div class="card-footer text-start">
                 <button type="button" class="btn btn-detail-product" data-bs-toggle="modal"
@@ -201,9 +205,9 @@
             <div class="card" data-aos="fade-up">
               <img src="assets/img/products/lemon-tea.png" class="card-img-top img-fluid" alt="varian-sambalgoreng">
               <div class="card-body text-start">
-                <h5>Sambal Goreng</h5>
+                <h5>Lemon Tea</h5>
                 <p class="card-text">
-                  Bumbu Masak Umik varian yang khusus dibuat untuk memasak sambal goreng.
+                  Minuman segar dengan perpaduan rasa lemon alami dan teh yang menyegarkan, cocok untuk menemani waktu santai Anda.
                 </p>
               </div>
               <div class="card-footer text-start">
