--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
         </div>
         <div class="modal-body">
           <form action="https://api.whatsapp.com/send" method="get" target="_blank">
-            <input type="hidden" name="phone" value="YOUR_PHONE_NUMBER_HERE">
+            <input type="hidden" name="phone" value="+6282197492963">
             <textarea name="text" class="form-control" placeholder="Tulis pesan Anda"></textarea>
             <button type="submit" class="btn btn-primary mt-3">Kirim Pesan</button>
           </form>
