--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
 
 
-    <section id="call-to-action">
+    <!-- <section id="call-to-action">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-12 col-lg-6">
@@ -406,9 +406,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section id="subcribe">
+    <!-- <section id="subcribe">
       <div class="container">
         <div class="subcribe-card">
           <div class="row d-flex align-items-center">
@@ -435,12 +435,11 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
 
-    <section id="kritiksaran">
+    <!-- <section id="kritiksaran">
       <div class="container">
         <div class="row">
-          <!-- Kritik & Saran -->
           <div class="col-12 col-md-6 col-lg-6">
             <div class="row">
               <div class="col-12">
@@ -466,7 +465,6 @@
             </form>
           </div>
 
-          <!-- FAQ -->
           <div class="col-12 col-md-6 col-lg-6">
             <div class="container accordion-section">
               <h1 class="text-center accordion-section-title">
@@ -474,7 +472,6 @@
               </h1>
               <div class="accordion" id="faqAccordion">
 
-                <!-- Item 1 -->
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -491,7 +488,6 @@
                   </div>
                 </div>
 
-                <!-- Item 2 -->
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -508,7 +504,6 @@
                   </div>
                 </div>
 
-                <!-- Item 3 -->
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingThird">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -524,7 +519,6 @@
                   </div>
                 </div>
 
-                <!-- Item 4 -->
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingFourth">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -540,7 +534,6 @@
                   </div>
                 </div>
 
-                <!-- Item 5 -->
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingFifth">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -561,7 +554,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Maps -->
     <!-- <section id="maps">
@@ -585,6 +578,30 @@
       </div>
     </section> -->
   </main>
+
+  <div class="row justify-content-center mt-5 mb-3">
+    <div class="col-md-8">
+      <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://unicorn-scb.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </div>
+  </div>
 
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
     <path fill="#44465F" fill-opacity="1"
@@ -847,6 +864,7 @@
   <!-- End Ulasan Modal -->
 
   <!-- CDN Vendors Scripts -->
+  <script id="dsq-count-scr" src="//unicorn-scb.disqus.com/count.js" async></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
