--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
   </main>
 
   <div class="row justify-content-center mt-5 mb-3">
-    <div class="col-md-8">
+    <div class="col-md-8 p-5">
       <div id="disqus_thread"></div>
 <script>
     /**
