--- a/index.html
+++ b/index.html
@@ -579,8 +579,13 @@
     </section> -->
   </main>
 
-  <div class="row justify-content-center mt-5 mb-3">
+  <div class="d-flex justify-content-center mt-5 mb-3">
     <div class="col-md-8 p-5">
+      <h3 class="text-center" style="  font-size: 36px;
+      font-weight: 700;
+      margin-bottom: 20px;
+      color: #ffa100;
+      font-family: Croissant One", cursive;">Ulasan</h3>
       <div id="disqus_thread"></div>
 <script>
     /**
