--- a/index.html
+++ b/index.html
@@ -579,34 +579,40 @@
     </section> -->
   </main>
 
-  <div class="d-flex justify-content-center mt-5 mb-3">
-    <div class="col-md-8 p-5">
-      <h3 class="text-center" style="  font-size: 36px;
-      font-weight: 700;
-      margin-bottom: 20px;
-      color: #ffa100;
-      font-family: Croissant One", cursive;">Ulasan</h3>
+  <section id="chat">
+    <h3 class="text-center" style="  font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    color: #ffa100;
+    font-family: Croissant One, cursive;
+    padding-top: 70px;
+    ">Ulasan</h3>
+    <div class="px-4">
       <div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://unicorn-scb.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+      <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://unicorn-scb.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        <div class="footer">
+          <span class="footer" style="color: white;">© 2024 by <a href="https://www.instagram.com/_ikhwnysrhh/" style="color: whitesmoke;">_ikhwnysrhh</a> . All Rights Reserved</span>
+        </div>
+      </div>
     </div>
-  </div>
+  </section>
 
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
     <path fill="#44465F" fill-opacity="1"
