--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="assets/img/others/logo.jpg" type="image/x-icon">
-  <title>Bumbu Umik - Dari rempah pilihan, untuk rasa terbaik </title>
+  <link rel="shortcut icon" href="assets/img/others/logo-unicorn.png" type="image/x-icon">
+  <title>Unicorn.scb </title>
 
   <!-- Meta Open-Graph -->
   <meta property="og:site_name" content="Bumbu Umik - Dari rempah pilihan, untuk rasa terbaik">
@@ -588,7 +588,7 @@
     padding-top: 70px;
     ">Ulasan</h3>
     <div class="px-4">
-      <div id="disqus_thread"></div>
+      <!-- <div id="disqus_thread"></div> -->
       <script>
         /**
         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -623,7 +623,7 @@
     <div class="container">
       <div class="row footer-top">
         <div class="col-md-3 col-12">
-          <img src="assets/img/others/logo.jpg" alt="Logo" class="d-inline-block mb-3 align-text-top logo-brand">
+          <img src="assets/img/others/logo-unicorn.png" alt="Logo" class="d-inline-block mb-3 align-text-top">
           <p>
             Produk Kuliner Indonesia
           </p>
@@ -656,12 +656,12 @@
             <li>
               <a href="https://api.whatsapp.com/send?phone=6281234567890&text=Halo%20Bumbu%20Umik%20Saya%20Mau%20Tanya%20Tentang%20Produk%20Anda"
                 target="_blank">
-                <i class="fab fa-whatsapp"></i> +62 812 3456 7890
+                <i class="fab fa-whatsapp"></i> +62 821 9749 2963
               </a>
             </li>
             <li>
               <a href="mailto:bumbuumik@gmail.com" target="_blank">
-                <i class="fas fa-envelope"></i> bumbuumik@gmail.com
+                <a href="#"><i class="instagram fab fa-instagram"></i> unicorn.scb</a>
               </a>
             </li>
           </ul>
@@ -671,7 +671,7 @@
       <div class="row copyright">
         <div class="col text-center">
           <p class="text-white">
-            &copy; 2023 Bumbu Umik. All Rights Reserved.
+            &copy; 2024 kuli.website. All Rights Reserved.
           </p>
         </div>
       </div>
