--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link active" href="#">Beranda</a></li>
-            <li class="nav-item"><a class="nav-link" href="#products">Produk</a></li>
             <li class="nav-item"><a class="nav-link" href="#about">Tentang</a></li>
-            <li class="nav-item"><a class="nav-link" href="#testimonial">Testimonial</a></li>
-            <li class="nav-item"><a class="nav-link" href="#call-to-action">Unggulan</a></li>
+            <li class="nav-item"><a class="nav-link" href="#products">Produk</a></li>
+            <li class="nav-item"><a class="nav-link" href="#ulasan">Ulasan</a></li>
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control search-input ps-4" type="search" placeholder="Cari Produk... lalu ENTER"
@@ -70,9 +69,7 @@
             <h3 class="text-lg" id="about-title"></h3>
           </div>
           <div class="col-12 col-lg-12 col-md-12">
-            <p class="text-lg">Bumbu Umik merupakan produk rempah-rempah untuk kuliner Indonesia. Dibuat dengan
-              bahan-bahan pilihan dan proses yang higienis, Bumbu Umik hadir untuk memenuhi kebutuhan bumbu dapur
-              rumah tangga Indonesia.
+            <p class="text-lg">Corn Ribs adalah hidangan jagung yang disajikan dengan berbagai varian rasa, seperti Balado, Cheese, dan Spicy Creamy, yang cocok sebagai camilan atau pendamping acara santai. Dilengkapi dengan segelas Lemon Tea yang menyegarkan, perpaduan teh dan lemon alami, menjadikan pengalaman makan Anda lebih lengkap dan menyegarkan.
             </p>
           </div>
         </div>
@@ -579,7 +576,7 @@
     </section> -->
   </main>
 
-  <section id="chat">
+  <section id="ulasan">
     <h3 class="text-center" style="  font-size: 36px;
     font-weight: 700;
     margin-bottom: 20px;
@@ -588,7 +585,7 @@
     padding-top: 70px;
     ">Ulasan</h3>
     <div class="px-4">
-      <!-- <div id="disqus_thread"></div> -->
+      <div id="disqus_thread"></div>
       <script>
         /**
         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -607,9 +604,6 @@
         })();
     </script>
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        <div class="footer">
-          <span class="footer" style="color: white;">© 2024 by <a href="https://www.instagram.com/_ikhwnysrhh/" style="color: whitesmoke;">_ikhwnysrhh</a> . All Rights Reserved</span>
-        </div>
       </div>
     </div>
   </section>
@@ -628,18 +622,20 @@
             Produk Kuliner Indonesia
           </p>
           <div class="social-icon mb-3">
-            <a href="#"><i class="facebook fab fa-facebook-square"></i></a>
-            <a href="#"><i class="instagram fab fa-instagram-square"></i></a>
-            <a href="#"><i class="twitter fab fa-twitter-square"></i></a>
+            <a href="https://www.instagram.com/unicorn.scb/"><i class="instagram fab fa-instagram"></i></a>
+            <a href="https://api.whatsapp.com/send?phone=6282197492963"
+            target="_blank">
+            <i class="fab fa-whatsapp"></i>
+          </a>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 col-6">
           <h3 class="footer-title">Tautan</h3>
           <ul class="list-unstyled">
             <li><a href="#">Beranda</a></li>
-            <li><a href="#products">Produk</a></li>
             <li><a href="#about">Tentang Kami</a></li>
-            <li><a href="#testimonial">Testimonial</a></li>
+            <li><a href="#products">Produk</a></li>
+            <li><a href="#ulasan">Ulasan</a></li>
           </ul>
         </div>
         <div class="col-md-3 col-sm-6 col-6">
@@ -654,14 +650,14 @@
           <h3 class="footer-title">Hubungi Kami</h3>
           <ul class="list-unstyled">
             <li>
-              <a href="https://api.whatsapp.com/send?phone=6281234567890&text=Halo%20Bumbu%20Umik%20Saya%20Mau%20Tanya%20Tentang%20Produk%20Anda"
+              <a href="https://api.whatsapp.com/send?phone=6282197492963"
                 target="_blank">
                 <i class="fab fa-whatsapp"></i> +62 821 9749 2963
               </a>
             </li>
             <li>
               <a href="mailto:bumbuumik@gmail.com" target="_blank">
-                <a href="#"><i class="instagram fab fa-instagram"></i> unicorn.scb</a>
+                <a href="https://www.instagram.com/unicorn.scb/"><i class="instagram fab fa-instagram"></i> unicorn.scb</a>
               </a>
             </li>
           </ul>
@@ -671,7 +667,7 @@
       <div class="row copyright">
         <div class="col text-center">
           <p class="text-white">
-            &copy; 2024 kuli.website. All Rights Reserved.
+            &copy; 2024 <a style="color: white; text-decoration: none;" href="https://www.instagram.com/kuli.website_/">kuli.website</a>. All Rights Reserved.
           </p>
         </div>
       </div>
