--- a/index.html
+++ b/index.html
@@ -584,8 +584,8 @@
     font-family: Croissant One, cursive;
     padding-top: 70px;
     ">Ulasan</h3>
-    <div class="px-4">
-      <div id="disqus_thread"></div>
+    <div class="px-4 py-1">
+      <div id="disqus_thread" class="mb-5"></div>
       <script>
         /**
         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
