--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="assets/img/others/logo-unicorn.png" type="image/x-icon">
-  <title>Unicorn.scb </title>
+  <title>Unicorn.Scb - Rasakan Varian Rasa Corn Ribs dan Kesegaran Lemon Tea </title>
 
   <!-- Meta Open-Graph -->
   <meta property="og:site_name" content="Bumbu Umik - Dari rempah pilihan, untuk rasa terbaik">
