--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
               data-aos-duration="1000">
               <img src="assets/img/icons/corn.png" alt="rempah-asli">
               <br>
-              <h4>Jagung Asli</h4>
+              <h4>Jagung Berkualitas</h4>
               <p>
-                Terbuat dari jagung asli <br> yang berkualitas.
+                Terbuat dari jagung segar <br> dan berkualitas.
               </p>
             </div>
           </div>
@@ -108,7 +108,7 @@
               <br>
               <h4>Ready Setiap Hari</h4>
               <p>
-                Siap dikirim setiap hari <br> sesuai kebutuhan konsumen.
+                Siap dikirim setiap hari <br> sesuai pesanan anda.
               </p>
             </div>
           </div>
@@ -585,7 +585,7 @@
     padding-top: 70px;
     ">Ulasan</h3>
     <div class="px-4 py-1">
-      <div id="disqus_thread" class="mb-5"></div>
+      <div id="disqus_thread" class="mb-4"></div>
       <script>
         /**
         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
