--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <header id="header">
     <nav class="navbar navbar-expand-lg shadow-sm fixed-top">
-      <div class="container py-2 pt-3">
+      <div class="container py-2">
         <a class="navbar-brand" href="#">
           <img src="assets/img/others/logo-unicorn.png" alt="Logo" class="d-inline-block align-text-top logo-brand">
         </a>
